crates/gateway/src/routes/snapshots/opensesame_gateway__routes__certmgr_ca__tests__certmgr_ca_error_forbidden.snap
---
source: crates/gateway/src/routes/certmgr_ca.rs
expression: forbidden
---
{
  "error": "forbidden",
  "hint": "owner or admin role required to manage certificate authorities"
}
