crates/gateway/src/routes/snapshots/opensesame_gateway__routes__certmgr_ca__tests__certmgr_ca_error_invalid_kind.snap
---
source: crates/gateway/src/routes/certmgr_ca.rs
expression: bad_kind
---
{
  "error": "invalid_kind",
  "hint": "kind must be \"root\" or \"intermediate\""
}
