crates/gateway/src/routes/snapshots/opensesame_gateway__routes__certmgr_ca__tests__certmgr_ca_error_invalid_mirror.snap
---
source: crates/gateway/src/routes/certmgr_ca.rs
expression: mirrors
---
{
  "error": "invalid_crl_mirror",
  "hint": "each URL must be an ASCII http:// or https:// URL of at most 512 characters"
}
