crates/gateway/src/routes/snapshots/opensesame_gateway__routes__certmgr_ca__tests__certmgr_ca_error_no_pending_csr.snap
---
source: crates/gateway/src/routes/certmgr_ca.rs
expression: no_csr
---
{
  "error": "no_pending_csr",
  "hint": "this authority is not awaiting an external signature; create it with external_signing=true"
}
