crates/gateway/src/routes/snapshots/opensesame_gateway__routes__certmgr_ca__tests__certmgr_ca_error_not_found.snap
---
source: crates/gateway/src/routes/certmgr_ca.rs
expression: missing
---
{
  "error": "not_found",
  "hint": "no certificate authority with that id in this organization"
}
